2007-12-20	Jennifer Averett <jennifer.averett@OARcorp.com>

	* posix/src/ualarm.c: Fixed bug where iteration did not work correctly.

2007-12-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sapi/include/confdefs.h: Revert. Requires info not available at
	preprocessing time.

2007-12-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sapi/include/confdefs.h: Catch the error when the user lowers the
	maximum number of drivers below the number of statically configured
	ones.

2007-12-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sapi/src/extension.c, sapi/src/extensioncreate.c,
	sapi/src/extensiondelete.c, sapi/src/extensionident.c: Extension
	Manager clean up. Update object id switches to new pattern. Catch
	some NULL parameter errors.

2007-12-19	Jennifer Averett <jennifer.averett@OARcorp.com>

	* posix/src/psignalunblockthread.c: Remove source that

2007-12-19	Jennifer Averett <jennifer.averett@OARcorp.com>

	* posix/src/psignalchecksignal.c: Make assert active during debug mode
	only

2007-12-19	Jennifer Averett <jennifer.averett@OARcorp.com>

	* posix/src/psignal.c: Move source around to enable path testing

2007-12-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/Makefile.am, libcsupport/include/rtems/malloc.h,
	libcsupport/src/free.c, libcsupport/src/malloc.c,
	libcsupport/src/malloc_p.h,
	libcsupport/src/malloc_report_statistics_plugin.c,
	libmisc/shell/shell.c, libmisc/shell/shell.h,
	score/src/objectinitializeinformation.c: Add posix_memalign. Split
	out management of deferred frees to subroutines.
	* libcsupport/src/malloc_deferred.c, libcsupport/src/posix_memalign.c: New files.

2007-12-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/Makefile.am, libcsupport/preinstall.am,
	libcsupport/src/malloc.c, libcsupport/src/mallocinfo.c,
	libmisc/Makefile.am, libmisc/shell/main_mallocinfo.c,
	libmisc/shell/shellconfig.h: Split malloc.c into multiple files with
	one function per file. Also split out statistics into a separate file